@@ -18,7 +18,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<!-- add-exports: dev.onvoid.webrtc.internal is not exported to
+					     applications, but the tests cover NativeApi, which native
+					     extension modules use to reach the native sources. -->
 					<argLine>
+						--add-exports webrtc.java/dev.onvoid.webrtc.internal=ALL-UNNAMED
 						--add-opens webrtc.java/dev.onvoid.webrtc=ALL-UNNAMED
 						--add-opens webrtc.java/dev.onvoid.webrtc.logging=ALL-UNNAMED
 						--add-opens webrtc.java/dev.onvoid.webrtc.media=ALL-UNNAMED
@@ -66,6 +70,7 @@
 							<forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
 							<argLine>
 								-Xcheck:jni
+								--add-exports webrtc.java/dev.onvoid.webrtc.internal=ALL-UNNAMED
 								--add-opens webrtc.java/dev.onvoid.webrtc=ALL-UNNAMED
 								--add-opens webrtc.java/dev.onvoid.webrtc.logging=ALL-UNNAMED
 								--add-opens webrtc.java/dev.onvoid.webrtc.media=ALL-UNNAMED
